# ai-companion

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vitest.config.ts
.husky/: commit-msg  pre-commit
docs/plans/: 2026-03-11-ai-companion-implementation.md
e2e/: app.spec.ts  commands.spec.ts  session-isolation.spec.ts
playwright-report/: index.html
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: SessionList.tsx
src/components/Chat/: ChatWindow.tsx  InputArea.tsx  MessageBubble.test.tsx  MessageBubble.tsx
src/components/Layout/: MainLayout.tsx
src/pages/: ChatPage.tsx  SettingsPage.tsx
src/services/: aiService.test.ts  aiService.ts  planAgent.ts
src/services/prompts/: index.test.ts  index.ts
src/services/providers/: base.ts  index.ts  minimax.test.ts  minimax.ts  ollama.test.ts  ollama.ts  openai.ts
src/stores/: appStore.test.ts  appStore.ts  chatStore.test.ts  chatStore.ts  settingsStore.ts
src/test/: setup.ts
src/types/: index.ts
