[package]
name = "ai-companion"
version = "1.0.0"
description = "AI Companion - 面向个人开发者的综合 AI 助手"
authors = ["you"]
edition = "2021"

[lib]
name = "ai_companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
